# sytra

./: .dockerignore  .gitignore  Dockerfile.check  README.md  README.rst  pyproject.toml
data_sample/: 1111.csv  9999.csv  h2021  summary_0713.csv
lib/: console.py  exceptions.py  mthtools.py  paftools.py  stocker.py
lib/analyzer/: .defaultconf.toml  __init__.py  analyzer.py
lib/commands/: allocate.py  follow.py  init.py
lib/stocker/: __init__.py  errors.py  stocker.py  sytraday.py
lib/util/: paths.py  sytraday.py
stocks/: summary.csv  summary_base.csv
stocks/225/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
stocks/3689/: 2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
stocks/4382/: 2018.csv  2019.csv
stocks/4384/: 2018.csv  2019.csv
stocks/4755/: 2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
stocks/6890/: 2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv
stocks/7201/: 2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
stocks/9005/: 2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv
tests/: analyzer_test.py  conftest.py  days_test.py  mth_test.py  paf_test.py  stocker_test.py  sytra_test.py
tests/.presetdata/: ac4382  ac4382re  ac6890  ac9005  ac9005re  h2020  s4382  s6890  s9005  sum0713  sum0714
tests/stocker_tests/: conftest.py  (+3 more)
tools/: stocker.py
(+24 files in other folders)
