[tool.poetry]
name = "sytra"
version = "0.1.0"
description = "System Trade Application"
authors = ["gilito <devel@gilito.net>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
mypy = "^0.780"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
