[tool.poetry]
name = "sytra"
version = "1.3.1"
description = "Analysis flamework for system trade."
license = "MIT"
authors = ["gili-Katagiri <kt.giri1425@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gili-Katagiri/sytra"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
pandas = "^1.0.4"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
mypy = "^0.780"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
